--- a/app/views/students/show.html.erb
+++ b/app/views/students/show.html.erb
@@ -14,6 +14,7 @@
         <li><strong>Age:</strong> <%= @student.age %></li>
         <li><strong>Gender:</strong> <%= @student.gender %></li>
         <li><strong>Email:</strong> <%= mail_to @student.email %></li>
+        <li><strong>Class:</strong> <%= @student.klass %></li>
       </ul>
       <div class="pull-right">
         <span>Created at <%= @student.created_at %></span>
