--- a/app/views/teachers/_form.html.erb
+++ b/app/views/teachers/_form.html.erb
@@ -1,11 +1,10 @@
 <div class="span12">
-  <%= simple_form_for @student, :html => { :class => 'form-horizontal' } do |f| %>
+  <%= simple_form_for @teacher, :html => { :class => 'form-horizontal' } do |f| %>
     <%= f.input :name %>
     <%= f.input :age %>
     <%= f.input :gender %>
     <%= f.input :email %>
     <%= f.input :email %>
-    <%= f.input :klass, :include_blank => false %>
 
     <div class="alert alert-box">
       <%= f.button :submit, :value => "Save", :class => "btn btn-primary" %>
