--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -13,3 +13,13 @@
  */
 
 @import "bootstrap";
+
+.navbar {
+  margin-top: 30px; }
+
+.navbar .brand {
+  margin: 0;
+  padding: 0 30px 0 10px; }
+
+.clear {
+  clear: both; }
