--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -1,17 +1,13 @@
-<div class="row">
-  <h2 class="span8">Classes</h2>
-
-  <div class="span4">
-    <%= link_to 'New Class', new_klass_path, :class => "btn btn-primary pull-right" %>
-  </div>
-</div>
+<h2>Dashboard</h2>
 
 <div class="row">
   <div class="span12">
+
     <% if @klasses.empty? %>
-      <h3>Classes not found</h3>
-      <h4>Register a <%= link_to 'New Class', new_klass_path %></h4>
+      <h3>Welcome to Scholar</h3>
+      <h4>Start by registering a <%= link_to 'New Teacher', new_teacher_path %></h4>
     <% else %>
+
       <table class="table-hover">
         <thead>
           <tr>
@@ -43,6 +39,7 @@
           <% end %>
         </tbody>
       </table>
+
     <% end %>
   </div>
 </div>
