--- a/app/views/klasses/edit.html.erb
+++ b/app/views/klasses/edit.html.erb
@@ -1,8 +1,14 @@
-<h2>Edit Class</h2>
+<div class="row">
+  <h2 class="span8">Edit Class</h2>
 
-<div class="btn-group pull-right">
-  <%= link_to 'List All', klasses_path, :class => "btn" %>
-  <%= link_to 'New Class', new_klass_path, :class => "btn" %>
+  <div class="span4">
+    <div class="btn-group pull-right">
+      <%= link_to 'List All', klasses_path, :class => "btn" %>
+      <%= link_to 'New Class', new_klass_path, :class => "btn" %>
+    </div>
+  </div>
 </div>
+
+<hr>
 
 <%= render "form" %>
