--- a/app/views/students/_form.html.erb
+++ b/app/views/students/_form.html.erb
@@ -1,14 +1,12 @@
-<div class="span12">
-  <%= simple_form_for @student, :html => { :class => 'form-horizontal' } do |f| %>
-    <%= f.input :name %>
-    <%= f.input :age %>
-    <%= f.input :gender %>
-    <%= f.input :email %>
-    <%= f.input :email %>
-    <%= f.input :klass, :include_blank => false %>
+<%= simple_form_for @student, :html => { :class => 'form-horizontal' } do |f| %>
+  <%= f.input :name %>
+  <%= f.input :age, :collection => 6..100, :prompt => "Select..." %>
+  <%= f.input :gender, :collection => gender_types, :prompt => "Select..." %>
+  <%= f.input :email %>
+  <%= f.association :klass, :label => "Class", :include_blank => false %>
 
-    <div class="alert alert-box">
-      <%= f.button :submit, :value => "Save", :class => "btn btn-primary" %>
-    </div>
-  <% end %>
-</div>
+  <div class="alert alert-info">
+    <%= f.button :submit, :value => "Save", :class => "btn btn-primary" %>
+    <%= submit_tag 'Cancel', :type => :reset, :class => "btn btn-danger" %>
+  </div>
+<% end %>
