--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -1,6 +1,10 @@
-<h2>Students</h2>
+<div class="row">
+  <h2 class="span8">Students</h2>
 
-<%= link_to 'New Student', new_student_path, :class => "btn btn-primary pull-right" %>
+  <div class="span4">
+    <%= link_to 'New Student', new_student_path, :class => "btn btn-primary pull-right" %>
+  </div>
+</div>
 
 <div class="row">
   <div class="span12">
