--- a/app/views/students/new.html.erb
+++ b/app/views/students/new.html.erb
@@ -1,5 +1,11 @@
-<h2>New Student</h2>
+<div class="row">
+  <h2 class="span8">New Student</h2>
 
-<%= link_to 'List All', students_path, :class => "btn btn-primary pull-right" %>
+  <div class="span4">
+    <%= link_to 'List All', students_path, :class => "btn btn-primary pull-right" %>
+  </div>
+</div>
+
+<hr>
 
 <%= render "form" %>
