--- a/app/views/students/show.html.erb
+++ b/app/views/students/show.html.erb
@@ -1,9 +1,13 @@
-<h2><%= @student.name %></h2>
+<div class="row">
+  <h2 class="span8"><%= @student.name %></h2>
 
-<div class="btn-group pull-right">
-  <%= link_to "Edit Student", edit_student_path, :class => "btn btn-primary" %>
-  <%= link_to "List All", students_path, :class => "btn" %>
-  <%= link_to "New Student", new_student_path, :class => "btn" %>
+  <div class="span4">
+    <div class="btn-group pull-right">
+      <%= link_to "Edit Student", edit_student_path, :class => "btn btn-primary" %>
+      <%= link_to "List All", students_path, :class => "btn" %>
+      <%= link_to "New Student", new_student_path, :class => "btn" %>
+    </div>
+  </div>
 </div>
 
 <div class="row">
