--- a/app/views/teachers/_form.html.erb
+++ b/app/views/teachers/_form.html.erb
@@ -1,12 +1,11 @@
-<div class="span12">
-  <%= simple_form_for @teacher, :html => { :class => 'form-horizontal' } do |f| %>
-    <%= f.input :name %>
-    <%= f.input :age %>
-    <%= f.input :gender %>
-    <%= f.input :email %>
+<%= simple_form_for @teacher, :html => { :class => 'form-horizontal' } do |f| %>
+  <%= f.input :name %>
+  <%= f.input :age, :collection => 18..100, :prompt => "Select..."  %>
+  <%= f.input :gender, :collection => gender_types, :prompt => "Select..." %>
+  <%= f.input :email %>
 
-    <div class="alert alert-box">
-      <%= f.button :submit, :value => "Save", :class => "btn btn-primary" %>
-    </div>
-  <% end %>
-</div>
+  <div class="alert alert-info">
+    <%= f.button :submit, :value => "Save", :class => "btn btn-primary" %>
+    <%= submit_tag 'Cancel', :type => :reset, :class => "btn btn-danger" %>
+  </div>
+<% end %>
