--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -9,6 +9,7 @@
           <%= nav_link_to "Dashboard", root_path %>
           <%= nav_link_to "Classes", klasses_path, :match => :first %>
           <%= nav_link_to "Teachers", teachers_path, :match => :first %>
+          <%= nav_link_to "Subjects", subjects_path, :match => :first %>
           <%= nav_link_to "Students", students_path, :match => :first %>
         </ul>
 
