--- a/app/views/subjects/show.html.erb
+++ b/app/views/subjects/show.html.erb
@@ -15,8 +15,8 @@
     <div class="well">
       <h3>Details</h3>
       <ul>
-        <li><strong>Area:</strong> <%= @subject.shift %></li>
-        <li><strong>Content:</strong> <%= @subject.term %></li>
+        <li><strong>Area:</strong> <%= @subject.area %></li>
+        <li><strong>Content:</strong> <%= @subject.content %></li>
       </ul>
       <div class="pull-right">
         <span>Created at <%= @subject.created_at %></span>
