--- a/app/views/subjects/_form.html.erb
+++ b/app/views/subjects/_form.html.erb
@@ -1,7 +1,7 @@
 <%= simple_form_for @subject, :html => { :class => 'form-horizontal' } do |f| %>
   <%= f.input :name %>
   <%= f.input :area %>
-  <%= f.input :content %>
+  <%= f.input :content, :input_html => { :rows => 10 } %>
 
   <div class="alert alert-info">
     <%= f.button :submit, :value => "Save", :class => "btn btn-primary" %>
