--- a/app/views/subjects/edit.html.erb
+++ b/app/views/subjects/edit.html.erb
@@ -4,7 +4,7 @@
   <div class="span4">
     <div class="btn-group pull-right">
       <%= link_to 'List All', subjects_path, :class => "btn" %>
-      <%= link_to 'New Class', new_subject_path, :class => "btn" %>
+      <%= link_to 'New Subject', new_subject_path, :class => "btn" %>
     </div>
   </div>
 </div>
