--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -6,7 +6,7 @@
         <h1 class="brand"><%= link_to "Scholar", root_path %></h1>
 
         <ul class="nav">
-          <%= nav_link_to "Dashboard", root_path %>
+          <%= nav_link_to "Dashboard", dashboard_path %>
           <%= nav_link_to "Classes", klasses_path, :match => :first %>
           <%= nav_link_to "Teachers", teachers_path, :match => :first %>
           <%= nav_link_to "Subjects", subjects_path, :match => :first %>
