--- a/app/views/subjects/index.html.erb
+++ b/app/views/subjects/index.html.erb
@@ -12,14 +12,14 @@
       <h3>Subjects not found</h3>
       <h4>Register a <%= link_to 'New Subject', new_subject_path %></h4>
     <% else %>
-      <table class="table-hover">
+      <table class="table table-striped">
         <thead>
           <tr>
             <th>#</th>
             <th>Name</th>
             <th>Area</th>
             <th>Content</th>
-            <th style="width: 70px;"></th>
+            <th style="width: 130px;"></th>
           </tr>
         </thead>
 
