--- a/app/views/teachers/index.html.erb
+++ b/app/views/teachers/index.html.erb
@@ -12,7 +12,7 @@
       <h3>Teachers not found</h3>
       <h4>Register a <%= link_to 'New Teacher', new_teacher_path %></h4>
     <% else %>
-      <table class="table-hover">
+      <table class="table table-striped">
         <thead>
           <tr>
             <th>#</th>
@@ -20,7 +20,7 @@
             <th>Age</th>
             <th>Gender</th>
             <th>Email</th>
-            <th style="width: 70px;"></th>
+            <th style="width: 130px;"></th>
           </tr>
         </thead>
 
