--- a/app/views/klasses/index.html.erb
+++ b/app/views/klasses/index.html.erb
@@ -12,7 +12,7 @@
       <h3>Classes not found</h3>
       <h4>Register a <%= link_to 'New Class', new_klass_path %></h4>
     <% else %>
-      <table class="table-hover">
+      <table class="table table-striped">
         <thead>
           <tr>
             <th>#</th>
@@ -20,7 +20,7 @@
             <th>Shift</th>
             <th>Term</th>
             <th>Year</th>
-            <th style="width: 70px;"></th>
+            <th style="width: 130px;"></th>
           </tr>
         </thead>
 
