--- a/app/views/students/show.html.erb
+++ b/app/views/students/show.html.erb
@@ -13,17 +13,15 @@
 <div class="row">
   <div class="span12">
     <div class="well">
-      <h3>Details</h3>
       <ul>
         <li><strong>Age:</strong> <%= @student.age %></li>
         <li><strong>Gender:</strong> <%= @student.gender %></li>
         <li><strong>Email:</strong> <%= mail_to @student.email %></li>
-        <li><strong>Class:</strong> <%= @student.klass %></li>
+        <li><strong>Class:</strong> <%= @student.klass.name %></li>
       </ul>
-      <div class="pull-right">
-        <span>Created at <%= @student.created_at %></span>
-        <span>Updated at <%= @student.updated_at %></span>
-      </div>
+    </div>
+    <div class="pull-right">
+      <small>Created at <%= @student.created_at %></small> | <small>Updated at <%= @student.updated_at %></small>
     </div>
   </div>
 </div>
