--- a/app/views/subjects/_form.html.erb
+++ b/app/views/subjects/_form.html.erb
@@ -5,6 +5,6 @@
 
   <div class="alert alert-info">
     <%= f.button :submit, :value => "Save", :class => "btn btn-primary" %>
-    <%= submit_tag 'Cancel', :type => :reset, :class => "btn btn-danger" %>
+    <%= submit_tag 'Reset', :type => :reset, :class => "btn btn-danger" %>
   </div>
 <% end %>
