--- a/app/views/subjects/show.html.erb
+++ b/app/views/subjects/show.html.erb
@@ -13,15 +13,13 @@
 <div class="row">
   <div class="span12">
     <div class="well">
-      <h3>Details</h3>
       <ul>
         <li><strong>Area:</strong> <%= @subject.area %></li>
         <li><strong>Content:</strong> <%= @subject.content %></li>
       </ul>
-      <div class="pull-right">
-        <span>Created at <%= @subject.created_at %></span>
-        <span>Updated at <%= @subject.updated_at %></span>
-      </div>
+    </div>
+    <div class="pull-right">
+      <small>Created at <%= @subject.created_at %></small> | <small>Updated at <%= @subject.updated_at %></small>
     </div>
   </div>
 </div>
