--- a/app/views/teachers/show.html.erb
+++ b/app/views/teachers/show.html.erb
@@ -13,16 +13,14 @@
 <div class="row">
   <div class="span12">
     <div class="well">
-      <h3>Details</h3>
       <ul>
         <li><strong>Age:</strong> <%= @teacher.age %></li>
         <li><strong>Gender:</strong> <%= @teacher.gender %></li>
         <li><strong>Email:</strong> <%= mail_to @teacher.email %></li>
       </ul>
-      <div class="pull-right">
-        <span>Created at <%= @teacher.created_at %></span>
-        <span>Updated at <%= @teacher.updated_at %></span>
-      </div>
+    </div>
+    <div class="pull-right">
+      <small>Created at <%= @teacher.created_at %></small> | <small>Updated at <%= @teacher.updated_at %></small>
     </div>
   </div>
 </div>
